Fri Sep 10 16:49:20 2010  Akinori MUSHA  <knu@iDaemons.org>

	* class.c (rb_scan_args): Add support for optional keyword
	  argument hash. [ruby-dev:42221] [ruby-dev:38048]

	* README.EXT, README.EXT.ja: Update documentation accordingly.

	* dir.c (dir_initialize): Make use of the new rb_scan_args()
	  feature.

	* io.c (rb_io_s_popen, rb_scan_open_args, rb_io_initialize)
	  (rb_io_s_pipe, open_key_args, io_s_foreach, io_s_readlines)
	  (rb_io_s_read, rb_io_set_encoding): Ditto.

	* transcode.c (str_transcode, econv_args)
	  (econv_primitive_convert): Ditto.

	* ext/zlib/zlib.c (rb_gzreader_initialize): Ditto.

Fri Sep 10 10:33:18 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* random.c (rb_genrand_ulong_limited): renamed from
	  rb_rand_internal and now this is public API.

	* include/ruby/ruby.h (rb_genrand_ulong_limited): added.

	* bignum.c (big_sparse_p): use rb_genrand_ulong_limited.

Fri Sep 10 13:07:22 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* ext/digest/lib/digest.rb: removed unused exception variable
	  assignment to avoid a warning.

Fri Sep 10 07:29:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/etc/etc.c (etc_systmpdir): assume system default tmpdir
	  safe.  [ruby-dev:42089]

Fri Sep 10 07:03:23 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_size_p): Pathname#size? translated from
	  pathname.rb.

Fri Sep 10 02:15:29 2010  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (inspect_peercred): support OpenBSD-current.
	  patch by Jeremy Evans.  [ruby-core:32240]

Thu Sep  9 23:25:53 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (vm_backtrace_each): skip allocator frames which have no
	  name.  [ruby-core:32231]

Thu Sep  9 22:39:08 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_size): Pathname#size translated from
	  pathname.rb.

Thu Sep  9 22:34:48 2010  wanabe  <s.wanabe@gmail.com>

	* compile.c (case_when_optimizable_literal): When float value can be