@@ -1,3 +1,10 @@
+Fri Sep 10 17:49:34 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>
+
+	* ext/openssl/lib/openssl/x509-internal.rb: removed unused local
+	  variable.
+
+	* test/openssl/*: less warnings while test running with -w.
+
 Fri Sep 10 16:49:20 2010  Akinori MUSHA  <knu@iDaemons.org>
 
 	* class.c (rb_scan_args): Add support for optional keyword
